--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         asperiores repellat."
       </p>
       <h2>1914 translation by H. Rackham</h2>
-      <p id="bottom">
+      <p>
         "On the other hand, we denounce with righteous indignation and dislike
         men who are so beguiled and demoralized by the charms of pleasure of the
         moment, so blinded by desire, that they cannot foresee the pain and
@@ -153,7 +153,7 @@
         pains."
       </p>
     </article>
-    <footer>
+    <footer id="bottom">
       <hr />
       <a href="#top">Jump to top</a>
       <br />
