--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hazifeladat</title>
-    <style>
-      p {
-        text-align: left;
-      }
-    </style>
+    <link rel="stylesheet" href="reset.css" media="screen" />
+    <link rel="stylesheet" href="styles.css" media="screen" />
   </head>
   <body>
     <header>
