h1 h2 p format, remove hr tag

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hazifeladat</title>
-    <link rel="stylesheet" href="reset.css" media="screen" />
-    <link rel="stylesheet" href="styles.css" media="screen" />
+    <link rel="stylesheet" href="style.css" media="screen" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <h1 id="top">Lorem Ipsum</h1>
       <nav>
         <a href="#bottom">go to Bottom</a>
-        <hr />
       </nav>
     </header>
     <article>
@@ -151,7 +155,6 @@
       </p>
     </article>
     <footer id="bottom">
-      <hr />
       <a href="#top">Jump to top</a>
       <br />
       <a href="https://www.lipsum.com">Reference site!</a>
