background color, span color change

--- a/index.html
+++ b/index.html
@@ -14,35 +14,36 @@
   </head>
   <body>
     <header>
-      <h1 id="top">Lorem Ipsum</h1>
       <nav>
         <a href="#bottom">go to Bottom</a>
       </nav>
+      <h1 id="top">Lorem Ipsum</h1>
     </header>
     <article>
-      <h2>What is Lorem Ipsum?</h2>
+      <h2>What is <span>Lorem Ipsum?</span></h2>
       <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book. It has survived not only five
-        centuries, but also the leap into electronic typesetting, remaining
-        essentially unchanged. It was popularised in the 1960s with the release
-        of Letraset sheets containing Lorem Ipsum passages, and more recently
-        with desktop publishing software like Aldus PageMaker including versions
-        of Lorem Ipsum.
+        <span>Lorem Ipsum</span> is simply dummy text of the printing and
+        typesetting industry. <span>Lorem Ipsum</span> has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a
+        galley of type and scrambled it to make a type specimen book. It has
+        survived not only five centuries, but also the leap into electronic
+        typesetting, remaining essentially unchanged. It was popularised in the
+        1960s with the release of Letraset sheets containing Lorem Ipsum
+        passages, and more recently with desktop publishing software like Aldus
+        PageMaker including versions of <span>Lorem Ipsum</span>.
       </p>
       <h2>Why do we use it?</h2>
       <p>
         It is a long established fact that a reader will be distracted by the
         readable content of a page when looking at its layout. The point of
-        using Lorem Ipsum is that it has a more-or-less normal distribution of
-        letters, as opposed to using 'Content here, content here', making it
-        look like readable English. Many desktop publishing packages and web
-        page editors now use Lorem Ipsum as their default model text, and a
-        search for 'lorem ipsum' will uncover many web sites still in their
-        infancy. Various versions have evolved over the years, sometimes by
-        accident, sometimes on purpose (injected humour and the like).
+        using <span>Lorem Ipsum</span> is that it has a more-or-less normal
+        distribution of letters, as opposed to using 'Content here, content
+        here', making it look like readable English. Many desktop publishing
+        packages and web page editors now use Lorem Ipsum as their default model
+        text, and a search for <span>'Lorem Ipsum'</span> will uncover many web
+        sites still in their infancy. Various versions have evolved over the
+        years, sometimes by accident, sometimes on purpose (injected humour and
+        the like).
       </p>
       <h2>Where does it come from?</h2>
       <p>
@@ -50,35 +51,39 @@
         has roots in a piece of classical Latin literature from 45 BC, making it
         over 2000 years old. Richard McClintock, a Latin professor at
         Hampden-Sydney College in Virginia, looked up one of the more obscure
-        Latin words, consectetur, from a Lorem Ipsum passage, and going through
-        the cites of the word in classical literature, discovered the
-        undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33
-        of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by
-        Cicero, written in 45 BC.
+        Latin words, consectetur, from a <span>Lorem Ipsum</span> passage, and
+        going through the cites of the word in classical literature, discovered
+        the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and
+        1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
+        Evil) by Cicero, written in 45 BC.
       </p>
       <h2>Where can I get some?</h2>
       <p>
-        There are many variations of passages of Lorem Ipsum available, but the
-        majority have suffered alteration in some form, by injected humour, or
-        randomised words which don't look even slightly believable. If you are
-        going to use a passage of Lorem Ipsum, you need to be sure there isn't
-        anything embarrassing hidden in the middle of text. All the Lorem Ipsum
-        generators on the Internet tend to repeat predefined chunks as
-        necessary, making this the first true generator on the Internet. It uses
-        a dictionary of over 200 Latin words, combined with a handful of model
-        sentence structures, to generate Lorem Ipsum which looks reasonable. The
-        generated Lorem Ipsum is therefore always free from repetition, injected
-        humour, or non-characteristic words etc.
+        There are many variations of passages of
+        <span>Lorem Ipsum</span> available, but the majority have suffered
+        alteration in some form, by injected humour, or randomised words which
+        don't look even slightly believable. If you are going to use a passage
+        of <span>Lorem Ipsum</span>, you need to be sure there isn't anything
+        embarrassing hidden in the middle of text. All the
+        <span>Lorem Ipsum</span> generators on the Internet tend to repeat
+        predefined chunks as necessary, making this the first true generator on
+        the Internet. It uses a dictionary of over 200 Latin words, combined
+        with a handful of model sentence structures, to generate Lorem Ipsum
+        which looks reasonable. The generated <span>Lorem Ipsum</span> is
+        therefore always free from repetition, injected humour, or
+        non-characteristic words etc.
       </p>
-      <h2>The standard Lorem Ipsum passage, used since the 1500s</h2>
+      <h2>
+        The standard <span>Lorem Ipsum</span> passage, used since the 1500s
+      </h2>
       <p>
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum."
+        "<span>Lorem Ipsum</span> dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+        enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+        officia deserunt mollit anim id est laborum."
       </p>
       <h2>
         Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in
@@ -90,7 +95,9 @@
         illo inventore veritatis et quasi architecto beatae vitae dicta sunt
         explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
         odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-        voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
+        voluptatem sequi nesciunt. Neque porro quisquam est, qui do<span
+          >Lorem Ipsum</span
+        >
         quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
         eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
         voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam
