--- a/index.html
+++ b/index.html
@@ -15,64 +15,105 @@
   <body>
     <header>
       <nav>
-        <a href="#bottom">go to Bottom</a>
+        <a href="#bottom"
+          >go to Bottom
+          <img
+            class="icon"
+            src="images/navigation-arrow-chevron-direction-forward-move-down-icon-svgrepo-com.svg"
+            alt="go down icon"
+        /></a>
       </nav>
       <h1 id="top">Lorem Ipsum</h1>
     </header>
     <article>
       <h2>What is <span>Lorem Ipsum?</span></h2>
-      <p>
-        <span>Lorem Ipsum</span> is simply dummy text of the printing and
-        typesetting industry. <span>Lorem Ipsum</span> has been the industry's
-        standard dummy text ever since the 1500s, when an unknown printer took a
-        galley of type and scrambled it to make a type specimen book. It has
-        survived not only five centuries, but also the leap into electronic
-        typesetting, remaining essentially unchanged. It was popularised in the
-        1960s with the release of Letraset sheets containing Lorem Ipsum
-        passages, and more recently with desktop publishing software like Aldus
-        PageMaker including versions of <span>Lorem Ipsum</span>.
-      </p>
+      <div class="container">
+        <img
+          src="/images/lorem1.png"
+          alt="lorem ipsum sample text"
+          class="image"
+        />
+        <div class="overlay">Lorem ipsum sample text</div>
+        <div class="text">
+          <p>
+            <span>Lorem Ipsum</span> is simply dummy text of the printing and
+            typesetting industry. <span>Lorem Ipsum</span> has been the
+            industry's standard dummy text ever since the 1500s, when an unknown
+            printer took a galley of type and scrambled it to make a type
+            specimen book. It has survived not only five centuries, but also the
+            leap into electronic typesetting, remaining essentially unchanged.
+            It was popularised in the 1960s with the release of Letraset sheets
+            containing Lorem Ipsum passages, and more recently with desktop
+            publishing software like Aldus PageMaker including versions of
+            <span>Lorem Ipsum</span>.
+          </p>
+        </div>
+      </div>
       <h2>Why do we use it?</h2>
-      <p>
-        It is a long established fact that a reader will be distracted by the
-        readable content of a page when looking at its layout. The point of
-        using <span>Lorem Ipsum</span> is that it has a more-or-less normal
-        distribution of letters, as opposed to using 'Content here, content
-        here', making it look like readable English. Many desktop publishing
-        packages and web page editors now use Lorem Ipsum as their default model
-        text, and a search for <span>'Lorem Ipsum'</span> will uncover many web
-        sites still in their infancy. Various versions have evolved over the
-        years, sometimes by accident, sometimes on purpose (injected humour and
-        the like).
-      </p>
+      <div class="container">
+        <img src="/images/lorem2.png" alt="diagonal layout" class="image" />
+        <div class="overlay">Diagonal layout lorem ipsum</div>
+        <div class="text">
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using <span>Lorem Ipsum</span> is that it has a more-or-less
+            normal distribution of letters, as opposed to using 'Content here,
+            content here', making it look like readable English. Many desktop
+            publishing packages and web page editors now use Lorem Ipsum as
+            their default model text, and a search for
+            <span>'Lorem Ipsum'</span> will uncover many web sites still in
+            their infancy. Various versions have evolved over the years,
+            sometimes by accident, sometimes on purpose (injected humour and the
+            like)..
+          </p>
+        </div>
+      </div>
       <h2>Where does it come from?</h2>
-      <p>
-        Contrary to popular belief, Lorem Ipsum is not simply random text. It
-        has roots in a piece of classical Latin literature from 45 BC, making it
-        over 2000 years old. Richard McClintock, a Latin professor at
-        Hampden-Sydney College in Virginia, looked up one of the more obscure
-        Latin words, consectetur, from a <span>Lorem Ipsum</span> passage, and
-        going through the cites of the word in classical literature, discovered
-        the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and
-        1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
-        Evil) by Cicero, written in 45 BC.
-      </p>
+      <div class="container">
+        <img src="/images/lorem3.png" alt="layout based" class="image" />
+        <div class="overlay">Layout based lorem ipsum</div>
+        <div class="text">
+          <p>
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old. Richard McClintock, a Latin professor
+            at Hampden-Sydney College in Virginia, looked up one of the more
+            obscure Latin words, consectetur, from a
+            <span>Lorem Ipsum</span> passage, and going through the cites of the
+            word in classical literature, discovered the undoubtable source.
+            Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus
+            Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
+            written in 45 BC.
+          </p>
+        </div>
+      </div>
       <h2>Where can I get some?</h2>
-      <p>
-        There are many variations of passages of
-        <span>Lorem Ipsum</span> available, but the majority have suffered
-        alteration in some form, by injected humour, or randomised words which
-        don't look even slightly believable. If you are going to use a passage
-        of <span>Lorem Ipsum</span>, you need to be sure there isn't anything
-        embarrassing hidden in the middle of text. All the
-        <span>Lorem Ipsum</span> generators on the Internet tend to repeat
-        predefined chunks as necessary, making this the first true generator on
-        the Internet. It uses a dictionary of over 200 Latin words, combined
-        with a handful of model sentence structures, to generate Lorem Ipsum
-        which looks reasonable. The generated <span>Lorem Ipsum</span> is
-        therefore always free from repetition, injected humour, or
-        non-characteristic words etc.
-      </p>
+      <div class="container">
+        <img
+          src="/images/lorem4.png"
+          alt="Cicero writing letters"
+          class="image"
+        />
+        <div class="overlay">Cicero writing letters</div>
+        <div class="text">
+          <p>
+            There are many variations of passages of
+            <span>Lorem Ipsum</span> available, but the majority have suffered
+            alteration in some form, by injected humour, or randomised words
+            which don't look even slightly believable. If you are going to use a
+            passage of <span>Lorem Ipsum</span>, you need to be sure there isn't
+            anything embarrassing hidden in the middle of text. All the
+            <span>Lorem Ipsum</span> generators on the Internet tend to repeat
+            predefined chunks as necessary, making this the first true generator
+            on the Internet. It uses a dictionary of over 200 Latin words,
+            combined with a handful of model sentence structures, to generate
+            Lorem Ipsum which looks reasonable. The generated
+            <span>Lorem Ipsum</span> is therefore always free from repetition,
+            injected humour, or non-characteristic words etc.
+          </p>
+        </div>
+      </div>
       <h2>
         The standard <span>Lorem Ipsum</span> passage, used since the 1500s
       </h2>
@@ -162,7 +203,13 @@
       </p>
     </article>
     <footer id="bottom">
-      <a href="#top">Jump to top</a>
+      <a href="#top"
+        >Jump to top
+        <img
+          class="icon"
+          src="images/navigation-arrow-chevron-direction-forward-move-up-icon-svgrepo-com.svg"
+          alt="go up icon"
+      /></a>
       <br />
       <a href="https://www.lipsum.com">Reference site!</a>
     </footer>
