--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <h2>
         The standard <span>Lorem Ipsum</span> passage, used since the 1500s
       </h2>
-      <p>
+      <p class="noimage">
         "<span>Lorem Ipsum</span> dolor sit amet, consectetur adipiscing elit,
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
         enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -130,7 +130,7 @@
         Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in
         45 BC
       </h2>
-      <p>
+      <p class="noimage">
         "Sed ut perspiciatis unde omnis iste natus error sit voluptatem
         accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
         illo inventore veritatis et quasi architecto beatae vitae dicta sunt
@@ -148,7 +148,7 @@
         voluptas nulla pariatur?"
       </p>
       <h2>1914 translation by H. Rackham</h2>
-      <p>
+      <p class="noimage">
         "But I must explain to you how all this mistaken idea of denouncing
         pleasure and praising pain was born and I will give you a complete
         account of the system, and expound the actual teachings of the great
@@ -168,7 +168,7 @@
         Section 1.10.33 of "de Finibus Bonorum et Malorum", written by Cicero in
         45 BC
       </h2>
-      <p>
+      <p class="noimage">
         "At vero eos et accusamus et iusto odio dignissimos ducimus qui
         blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
         et quas molestias excepturi sint occaecati cupiditate non provident,
@@ -184,7 +184,7 @@
         asperiores repellat."
       </p>
       <h2>1914 translation by H. Rackham</h2>
-      <p>
+      <p class="noimage">
         "On the other hand, we denounce with righteous indignation and dislike
         men who are so beguiled and demoralized by the charms of pleasure of the
         moment, so blinded by desire, that they cannot foresee the pain and
