remove pattern from form. submit button added in form. darker navbar and footer color. remove justify text align

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <nav id="top">
         <a class="link" href="#bottom">Jump to bottom</a>
       </nav>
-      <h1>Lorem Ipsum</h1>
     </header>
     <article>
+      <h1>Lorem Ipsum</h1>
       <h2>What is <span>Lorem Ipsum?</span></h2>
       <div class="container">
         <img
@@ -197,7 +197,7 @@
       </p>
     </article>
     <h1>Send an article to a friend!</h1>
-    <form>
+    <form action="">
       <div>
         <label for="first">First Name</label>
         <input
@@ -223,7 +223,6 @@
           id="phone"
           name="phone"
           placeholder="Your phone number"
-          pattern="[0-9]{0-9}-[0-9]{0-9}-[0-9]{0-9}"
         />
       </div>
       <div>
@@ -252,10 +251,10 @@
         rows="5"
         cols="33"
       ></textarea>
-      <button type="button">Register</button>
+      <button id="register" type="submit">Send</button>
     </form>
     <footer id="bottom">
-      <div>
+      <div class="down">
         <a class="link" href="#top">Jump to top</a>
         <a class="link" href="https://www.lipsum.com">Reference site!</a>
       </div>
