--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     </header>
     <article>
       <h1>Lorem Ipsum</h1>
+      <h1>Dolor sit amet</h1>
+      <h1>Consectetur adipiscing elit</h1>
       <h2>What is <span>Lorem Ipsum?</span></h2>
       <div class="container">
         <img
