--- a/index.html
+++ b/index.html
@@ -22,21 +22,24 @@
   <body>
     <header id="top">
       <nav>
-      <div class="topnav" id="myTopnav">
-        <a href="#bottom" class="active">Jump to</a>
-        <a href="#paragraph1" class="navigation">What is <span>Lorem Ipsum</span></a>
-        <a href="#paragraph2" class="navigation">Why do we use it?</a>
-        <a href="#paragraph3" class="navigation">Where does it come from?</a>
-        <a href="#paragraph4" class="navigation">Where can i get some?</a>
-        <a href="#paragraph5" class="navigation">the standard <span>Lorem Ipsum</span></a>
-        </a>
-      </div>
-    </nav>
+        <div class="topnav" id="myTopnav">
+          <a href="#bottom" class="active">Jump to</a>
+          <a href="#paragraph1" class="navigation"
+            >What is <span>Lorem Ipsum</span></a
+          >
+          <a href="#paragraph2" class="navigation">Why do we use it??</a>
+          <a href="#paragraph3" class="navigation">Where does it come from?</a>
+          <a href="#paragraph4" class="navigation">Where can i get some?</a>
+          <a href="#paragraph5" class="navigation"
+            >the standard <span>Lorem Ipsum</span></a
+          >
+        </div>
+      </nav>
     </header>
     <article>
-      <h1 class="animaton">Lorem Ipsum</h1>
-      <h1 class="animaton">Dolor sit amet</h1>
-      <h1 class="animaton">Consectetur adipiscing elit</h1>
+      <h2 class="animaton first">Lorem Ipsum</h2>
+      <h2 class="animaton second">Dolor sit amet</h2>
+      <h2 class="animaton third">Consectetur adipiscing elit</h2>
       <h2 id="paragraph1">What is <span>Lorem Ipsum?</span></h2>
       <div class="container">
         <img
@@ -215,7 +218,7 @@
       </p>
     </article>
     <h1 id="article">Send an article to a friend!</h1>
-    <form action="">
+    <form action="input">
       <div>
         <label for="first">First Name</label>
         <input
@@ -275,7 +278,9 @@
       <div class="down">
         <a class="link" href="#top">Jump to top</a>
         <a class="link" href="https://www.lipsum.com">Reference site!</a>
-        <a class="link" href="https://openart.ai/home">Background by Openartai</a>
+        <a class="link" href="https://cssgradient.io"
+          >Background by CSSgradient</a
+        >
       </div>
     </footer>
   </body>
