--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
     <title>Hazifeladat</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" media="screen" />
     <link
       rel="stylesheet"
@@ -20,6 +26,11 @@
     />
   </head>
   <body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <header id="top">
       <nav>
         <div class="topnav" id="myTopnav">
@@ -218,62 +229,39 @@
       </p>
     </article>
     <h1 id="article">Send an article to a friend!</h1>
-    <form action="input">
-      <div>
-        <label for="first">First Name</label>
-        <input
-          type="text"
-          id="first"
-          name="firstname"
-          placeholder="Enter your first name"
-          required
-        />
-        <label for="last">Last name</label>
-        <input
-          type="text"
-          id="last"
-          name="lastname"
-          placeholder="Enter your Last name"
-          required
-        />
+    <form>
+      <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">First Name</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter your First Name">
       </div>
-      <div>
-        <label for="phone">Enter your phone number:</label>
-        <input
-          type="tel"
-          id="phone"
-          name="phone"
-          placeholder="Your phone number"
-        />
+      <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">Last Name</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter your Last Name">
       </div>
-      <div>
-        <label for="division">Select age group</label>
-        <select name="division" id="division">
-          <option value="kids">Under 18</option>
-          <option value="adults">18-50</option>
-          <option value="seniors">50+</option>
-        </select>
+      <div class="mb-3">
+      <select class="form-select" aria-label="Default select example">
+        <option selected>Select your age</option>
+        <option value="1">Under 18</option>
+        <option value="2">18-30</option>
+        <option value="3">30+</option>
+      </select>
+    </div>
+      <div data-mdb-input-init class="form-outline mb-3" style="width: 100%; max-width: 22rem">
+        <label class="form-label" for="phone">Enter your phone number</label>
+        <input type="text" id="phone" class="form-control" data-mdb-input-mask-init data-mdb-input-mask="+36 999-999-999" />
       </div>
-      <div>
-        <label for="email">Email</label>
-        <input
-          type="email"
-          name="email"
-          id="email"
-          placeholder="Email adress"
-          required
-        />
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
       </div>
-      <label for="message">send message</label>
-      <textarea
-        placeholder="type your message"
-        id="message"
-        name="message"
-        rows="5"
-        cols="33"
-      ></textarea>
-      <button id="register" type="submit">Send</button>
-    </form>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Send message</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      <div class="d-grid gap-2 d-md-block">
+        <button class="btn btn-primary" type="button">Submit</button>
+      </div>
     <footer id="bottom">
       <div class="down">
         <a class="link" href="#top">Jump to top</a>
