--- a/index.html
+++ b/index.html
@@ -232,36 +232,70 @@
     <form>
       <div class="mb-3">
         <label for="formGroupExampleInput" class="form-label">First Name</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter your First Name">
+        <input
+          type="text"
+          class="form-control"
+          id="formGroupExampleInput"
+          placeholder="Enter your First Name"
+        />
       </div>
       <div class="mb-3">
         <label for="formGroupExampleInput2" class="form-label">Last Name</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter your Last Name">
+        <input
+          type="text"
+          class="form-control"
+          id="formGroupExampleInput2"
+          placeholder="Enter your Last Name"
+        />
       </div>
       <div class="mb-3">
-      <select class="form-select" aria-label="Default select example">
-        <option selected>Select your age</option>
-        <option value="1">Under 18</option>
-        <option value="2">18-30</option>
-        <option value="3">30+</option>
-      </select>
-    </div>
-      <div data-mdb-input-init class="form-outline mb-3" style="width: 100%; max-width: 22rem">
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Select your age</option>
+          <option value="1">Under 18</option>
+          <option value="2">18-30</option>
+          <option value="3">30+</option>
+        </select>
+      </div>
+      <div
+        data-mdb-input-init
+        class="form-outline mb-3"
+        style="width: 100%; max-width: 22rem"
+      >
         <label class="form-label" for="phone">Enter your phone number</label>
-        <input type="text" id="phone" class="form-control" data-mdb-input-mask-init data-mdb-input-mask="+36 999-999-999" />
+        <input
+          type="text"
+          id="phone"
+          class="form-control"
+          data-mdb-input-mask-init
+          data-mdb-input-mask="+36 999-999-999"
+        />
       </div>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        <input
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+        />
+        <div id="emailHelp" class="form-text">
+          We'll never share your email with anyone else.
+        </div>
       </div>
       <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Send message</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <label for="exampleFormControlTextarea1" class="form-label"
+          >Send message</label
+        >
+        <textarea
+          class="form-control"
+          id="exampleFormControlTextarea1"
+          rows="3"
+        ></textarea>
       </div>
       <div class="d-grid gap-2 d-md-block">
         <button class="btn btn-primary" type="button">Submit</button>
       </div>
+    </form>
     <footer id="bottom">
       <div class="down">
         <a class="link" href="#top">Jump to top</a>
