--- a/index.html
+++ b/index.html
@@ -231,20 +231,20 @@
     <h1 id="article">Send an article to a friend!</h1>
     <form>
       <div class="mb-3">
-        <label for="formGroupExampleInput" class="form-label">First Name</label>
+        <label for="" class="form-label">First Name</label>
         <input
           type="text"
           class="form-control"
-          id="formGroupExampleInput"
+          id="Firstname"
           placeholder="Enter your First Name"
         />
       </div>
       <div class="mb-3">
-        <label for="formGroupExampleInput2" class="form-label">Last Name</label>
+        <label for="" class="form-label">Last Name</label>
         <input
           type="text"
           class="form-control"
-          id="formGroupExampleInput2"
+          id="Lastname"
           placeholder="Enter your Last Name"
         />
       </div>
@@ -256,11 +256,7 @@
           <option value="3">30+</option>
         </select>
       </div>
-      <div
-        data-mdb-input-init
-        class="form-outline mb-3"
-        style="width: 100%; max-width: 22rem"
-      >
+      <div data-mdb-input-init class="form-outline mb-3">
         <label class="form-label" for="phone">Enter your phone number</label>
         <input
           type="text"
@@ -271,11 +267,11 @@
         />
       </div>
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <label for="" class="form-label">Email address</label>
         <input
           type="email"
           class="form-control"
-          id="exampleInputEmail1"
+          id="Emailaddress"
           aria-describedby="emailHelp"
         />
         <div id="emailHelp" class="form-text">
@@ -283,14 +279,8 @@
         </div>
       </div>
       <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label"
-          >Send message</label
-        >
-        <textarea
-          class="form-control"
-          id="exampleFormControlTextarea1"
-          rows="3"
-        ></textarea>
+        <label for="" class="form-label">Send message</label>
+        <textarea class="form-control" id="text" rows="3"></textarea>
       </div>
       <div class="d-grid gap-2 d-md-block">
         <button class="btn btn-primary" type="button">Submit</button>
