Image case sensitive

--- a/index.html
+++ b/index.html
@@ -112,11 +112,7 @@
       <h2 class="animaton third">Consectetur adipiscing elit</h2>
       <h2 id="paragraph1">What is <span>Lorem Ipsum?</span></h2>
       <div class="container">
-        <img
-          src="/images/lorem1.png"
-          alt="lorem ipsum sample text"
-          class="image"
-        />
+        <img src="lorem1.PNG" alt="lorem ipsum sample text" class="image" />
         <div class="overlay">Lorem ipsum sample text</div>
         <div class="text">
           <p>
@@ -135,7 +131,7 @@
       </div>
       <h2 id="paragraph2">Why do we use it?</h2>
       <div class="container">
-        <img src="/images/lorem2.png" alt="diagonal layout" class="image" />
+        <img src="lorem2.PNG" alt="diagonal layout" class="image" />
         <div class="overlay">Diagonal layout lorem ipsum</div>
         <div class="text">
           <p>
@@ -155,7 +151,7 @@
       </div>
       <h2 id="paragraph3">Where does it come from?</h2>
       <div class="container">
-        <img src="/images/lorem3.png" alt="layout based" class="image" />
+        <img src="lorem3.PNG" alt="layout based" class="image" />
         <div class="overlay">Layout based lorem ipsum</div>
         <div class="text">
           <p>
@@ -174,11 +170,7 @@
       </div>
       <h2 id="paragraph4">Where can I get some?</h2>
       <div class="container">
-        <img
-          src="/images/lorem4.png"
-          alt="Cicero writing letters"
-          class="image"
-        />
+        <img src="lorem4.PNG" alt="Cicero writing letters" class="image" />
         <div class="overlay">Cicero writing letters</div>
         <div class="text">
           <p>
