--- a/index.html
+++ b/index.html
@@ -98,8 +98,12 @@
               >Type in a keyword:</label
             >
             <span>Type in a keyword:</span>
+            <label for="titleInput" class="form-label"
+              >Type in a keyword:</label
+            >
             <input
               type="text"
+              id="titleInput"
               name="title undefined"
               class="form-control input-sm"
               placeholder="Lorem ipsum..."
@@ -352,7 +356,7 @@
         <textarea class="form-control" id="text" rows="3"></textarea>
       </div>
       <div class="d-grid gap-2 d-md-block">
-        <input class="btn btn-primary" type="submit" />
+        <input class="btn btn-primary" type="submit" value="Submit" />
       </div>
     </form>
     <footer id="bottom">
